--- a/app/src/main/res/layout/activity_add_cost.xml
+++ b/app/src/main/res/layout/activity_add_cost.xml
@@ -21,14 +21,25 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_add_cost" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+    <include
+        layout="@layout/content_add_cost"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize" />
+
+    <!--<RelativeLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+    <!--tools:context="com.kodelabs.mycosts.presentation.ui.activities.AddCostActivity"-->
+    <!--tools:showIn="@layout/activity_add_cost">-->
+
+
+    <!--</RelativeLayout>-->
 
 </android.support.design.widget.CoordinatorLayout>
