--- a/app/src/main/res/layout/card_cost_item.xml
+++ b/app/src/main/res/layout/card_cost_item.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/cost_item_title"
+            android:id="@+id/cost_item_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
