--- a/app/src/main/res/layout/card_individual_cost_item.xml
+++ b/app/src/main/res/layout/card_individual_cost_item.xml
@@ -4,7 +4,7 @@
     android:id="@+id/cost_item_card"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="164dp"
+    android:layout_height="100dp"
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
@@ -16,23 +16,23 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/cost_item_title"
+            android:id="@+id/cost_item_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Today's cost"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Groceries"
             android:textSize="20sp" />
 
 
         <TextView
-            android:id="@+id/cost_item_category"
+            android:id="@+id/cost_item_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cost_item_title"
-            android:layout_margin="20dp"
-            android:text="Groceries"
+            android:layout_below="@id/cost_item_category"
+            android:layout_margin="16dp"
+            android:text="description"
             android:textSize="15sp" />
 
 
@@ -40,40 +40,23 @@
             android:id="@+id/cost_item_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
+            android:layout_alignBaseline="@id/cost_item_category"
+            android:layout_marginLeft="50dp"
+            android:layout_toEndOf="@id/cost_item_category"
+            android:layout_toRightOf="@id/cost_item_category"
             android:text="127$"
-            android:textSize="40sp" />
+            android:textSize="20sp" />
 
         <ImageButton
-            android:id="@+id/delete_btn"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@null"
-            android:contentDescription="Delete button"
-            android:src="@drawable/ic_close_black_24dp" />
-
-
-        <ImageButton
-            android:id="@+id/edit_btn"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
+            android:layout_alignTop="@+id/cost_item_value"
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:background="@null"
-            android:contentDescription="Edit button"
-            android:src="@drawable/ic_edit_black_18dp" />
+            android:src="@drawable/ic_dots_vertical" />
 
 
     </RelativeLayout>
