--- a/app/src/main/res/layout/card_daily_cost_item.xml
+++ b/app/src/main/res/layout/card_daily_cost_item.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/cost_item_category"
+            android:id="@+id/cost_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
@@ -24,7 +24,7 @@
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/cost_item_value"
+            android:id="@+id/cost_item_total_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
