--- a/app/src/main/res/menu/menu_cost_item.xml
+++ b/app/src/main/res/menu/menu_cost_item.xml
@@ -4,13 +4,13 @@
 
 
     <item
-        android:id="@+id/item_movies"
+        android:id="@+id/item_edit"
         android:title="Edit"
         android:visible="true"
         app:showAsAction="ifRoom|withText" />
 
     <item
-        android:id="@+id/item_music"
+        android:id="@+id/item_delete"
         android:title="Delete"
         android:visible="true"
         app:showAsAction="ifRoom|withText" />
