--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".presentation.ui.activities.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_add_cost"
+        android:actionViewClass="android.widget.ImageButton"
+        android:icon="@drawable/ic_add_white_24dp"
+        android:orderInCategory="1"
+        android:title="@string/action_add_cost"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_about"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_about"
         app:showAsAction="never" />
 </menu>
