--- a/app/src/main/res/layout/individual_cost_item.xml
+++ b/app/src/main/res/layout/individual_cost_item.xml
@@ -26,15 +26,15 @@
 
     <ImageButton
         android:id="@+id/button_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
         android:background="@null"
-        android:src="@drawable/ic_dots_vertical" />
+        android:src="@drawable/ic_vertical_dots" />
 
     <TextView
         android:id="@+id/cost_item_total_value"
