--- a/app/src/main/res/layout/expanded_cost_item.xml
+++ b/app/src/main/res/layout/expanded_cost_item.xml
@@ -31,10 +31,11 @@
                 android:id="@+id/cost_item_total_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toEndOf="@id/cost_item_title"
-                android:layout_toRightOf="@id/cost_item_title"
+                android:layout_marginEnd="35dp"
+                android:layout_marginRight="35dp"
                 android:paddingTop="5dp"
                 android:text="127$"
                 android:textColor="#fff"
